--- a/timberwolf-map/templates/example_fullmap.html
+++ b/timberwolf-map/templates/example_fullmap.html
@@ -5,11 +5,9 @@
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
             <title>Flask Google Maps Full Map Example</title>
             <link rel="stylesheet" href="">
-            {{fullmap.js}}
+            {{plinemap.js}}
     </head>
     <body>
-        <h1>Flask Google Maps Full Map Example</h1>
-        {{ fullmap.html }}
-
+        {{ plinemap.html }}
     </body>
 </html>
