--- a/android/app/src/main/res/layout/activity_map.xml
+++ b/android/app/src/main/res/layout/activity_map.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.tmj.timberwolf.MapActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="300dp"
+        android:layout_height="500dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/common_full_open_on_phone" />
 </android.support.constraint.ConstraintLayout>
